--- a/app/views/locations/new.html.erb
+++ b/app/views/locations/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New Location</h1>
 
-<form action="/locations" method="post">
+<%# <form action="/locations" method="post">
   <div>
     <label for="name">Location Name</label>
     <input type="text" name="name" id="name" required />
@@ -17,6 +17,25 @@
   </div>
 
   <button type="submit">Add Location</button>
-</form>
+</form> %>
+
+<%= form_with url: locations_path, method: :post, local: true do |form|%>
+<div>
+  <%= form.label :name, "Location Name" %>
+  <%= form.text_field :name, required: true %>
+</div>
+
+<div>
+  <%= form.label :latitude, "Latitude" %>
+  <%= form.text_field :latitude, required: true %>
+</div>
+
+<div>
+  <%= form.label :longitude, "Longitude" %>
+  <%= form.text_field :longitude, required: true%>
+</div>
+
+<%= form.submit "Add Location" %>
+<% end %>
 
 <%= link_to 'Weather Monitors', locations_path %>
