Add view for locations by address form

--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -27,4 +27,5 @@
   </tbody>
 </table>
 
-<%= link_to 'Add Location', new_location_path %>
+<%= link_to 'Add Location from Coordinates', new_location_path %>
+<%= link_to 'Add Location from Address', new_from_address_locations_path %>
