--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -27,5 +27,9 @@
   </tbody>
 </table>
 
+<br />
 <%= link_to 'Add Location from Coordinates', new_location_path %>
+<br />
 <%= link_to 'Add Location from Address', new_from_address_locations_path %>
+<br />
+<%= link_to 'Add Your Current Location', new_from_ip_locations_path%>
