--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -2,7 +2,7 @@
 <%# Features:
   1. list locations,
   2. provide link to view each location,
-  3. button to add location
+  3. links to add location
 %>
 
 <h1>World Wide Weather</h1>
