--- a/app/views/locations/new_from_address.html.erb
+++ b/app/views/locations/new_from_address.html.erb
@@ -1,4 +1,4 @@
-<h1>Add Location</h1>
+<h1>Add Location from Address</h1>
 
 <%= form_with url: create_from_address_locations_path, method: :post, local: true do |form| %>
   <div>
