Update temperature unit to Fahrenheit

--- a/app/views/locations/forecast.html.erb
+++ b/app/views/locations/forecast.html.erb
@@ -4,8 +4,8 @@
   <thead>
     <tr>
       <th>Date</th>
-      <th>High Temperature (°C)</th>
-      <th>Low Temperature (°C)</th>
+      <th>High Temperature (°F)</th>
+      <th>Low Temperature (°F)</th>
       <th>Precipitation (mm)</th>
       <th>Max Wind Speed (km/hr)</th>
       <th>Sunrise</th>
