Persist locations using ActiveRecord (SQLite3)

--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -19,7 +19,7 @@
     <tr>
       <td><%= location.name %></td>
       <td>
-        <%= link_to 'View', forecast_location_path(index) %>
+        <%= link_to 'View', forecast_location_path(location.id) %>
       </td>
     </tr>
     <% end %>
