--- a/app/views/locations/new_from_ip.html.erb
+++ b/app/views/locations/new_from_ip.html.erb
@@ -1,6 +1,6 @@
 <h1>Add Current Location</h1>
 
-<%= form_with url: create_from_ip_locations_path, method: :post, local: true do |form| %>
+<%= form_with model: @location, url: create_from_ip_locations_path, method: :post, local: true do |form| %>
   <div>
     <%= form.label :name, "Location Name" %>
     <%= form.text_field :name, required: true %>
