--- a/app/views/locations/new.html.erb
+++ b/app/views/locations/new.html.erb
@@ -1,25 +1,6 @@
 <h1>Add Location from Coordinates</h1>
 
-<%# <form action="/locations" method="post">
-  <div>
-    <label for="name">Location Name</label>
-    <input type="text" name="name" id="name" required />
-  </div>
-
-  <div>
-    <label for="latitude">Latitude</label>
-    <input type="text" name="latitude" id="latitude" required />
-  </div>
-
-  <div>
-    <label for="longitude">Longitude</label>
-    <input type="text" name="longitude" id="longitude" required />
-  </div>
-
-  <button type="submit">Add Location</button>
-</form> %>
-
-<%= form_with url: locations_path, method: :post, local: true do |form|%>
+<%= form_with model: @location, url: locations_path, method: :post, local: true do |form|%>
 <div>
   <%= form.label :name, "Location Name" %>
   <%= form.text_field :name, required: true %>
